--- a/style.css
+++ b/style.css
@@ -212,12 +212,12 @@ footer p {
   
   .about-images img {
     margin-right: 10px;
-    width: 100%;
-    max-width: 400px;
+    width: auto;
+    max-width: 620px;
   }
   
   .about-content p {
-    width: 600px;
+    width: auto;
     margin-top: 80px;
     margin-left: 10px;
   }
@@ -239,7 +239,8 @@ footer p {
   }
 
   .item img {
-    width: 770px;
+    width: auto;
+    max-width: 1200px;
   }
 
   #host {
@@ -266,7 +267,7 @@ footer p {
   }
   
   .host-image img {
-    width: 100%;
-    max-width: 700px;
+    width: auto;
+    max-width: 1200px;
   }
 }
