--- a/style.css
+++ b/style.css
@@ -31,34 +31,19 @@ section.alternate-background {
 }
 
 main img {
-  width: 100%;
-  height: auto;
+  width: 100px;
 }
 
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .item {
   flex: 1;
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; /* Update to align items to the left */
-  text-align: left;
-}
-
-.item h3 {
-  margin-top: 10px;
-  font-size: 20px;
-  text-align: left; /* Add text-align property to left align the title */
-}
-
-.item img {
-  width: 400px;
+  margin: 20px;
 }
 
 .item-double {
@@ -69,66 +54,67 @@ main img {
 
 header {
   background-color: #ff385c;
-  margin-bottom: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 20px 20px 0 20px;
+  text-align: center;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
   font-size: 72px;
   color: #fff;
-  margin: 0;
-  text-align: center;
 }
 
 header nav {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
 }
 
 header nav ul {
   display: flex;
-  list-style: none;
-  padding-left: 0;
+  list-style-type: none;
+  padding: 0;
+}
+
+header nav ul li {
+  margin-right: 20px;
+}
+
+header nav ul li:last-child {
+  margin-right: 0;
 }
 
 header nav ul li a {
   color: #fff;
   text-decoration: none;
-  margin: 0 20px 0 0;
+  padding: 0 20px 0 0;
 }
 
-header nav ul li:last-child a {
-  margin-right: 0;
+header nav ul li a:hover {
+  color: #bdbdbd;
+  text-decoration: none;
 }
 
 /* -------  Search Form ------- */
-
 form {
   border: 2px solid #ff385c;
   padding: 10px;
-  margin: 20px;
-}
-
-form .form-row {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
 }
 
 form label {
   font-weight: bold;
-  flex: 1;
-  text-align: right;
-  margin-right: 10px;
 }
 
 form select,
 form input {
-  flex: 2;
+  margin-bottom: 10px;
+}
+
+form select {
+  width: 100%;
+}
+
+form input {
+  width: 100%;
 }
 
 form button {
@@ -139,6 +125,7 @@ form button {
   padding: 15px;
   width: 100%;
 }
+
 
 /* -------  Footer ------- */
 
@@ -152,122 +139,163 @@ footer p {
   padding: 20px;
 }
 
-/* -------  Media Query: Desktop View------- */
+/* -------  Additional Styles for Sections ------- */
+
+#about,
+#ideas,
+#host {
+
+  align-items: center;
+  text-align: left;
+}
+
+#about img,
+#ideas img,
+#host img {
+  display: flex;
+  margin: 0 auto 10px;
+  width: 100%; /* Adjust the width as desired */
+  height: auto; /* Maintain aspect ratio */
+}
+
+/* ------- Media query: Desktop view ------- */
 
 @media all and (min-width: 480px) {
+  body {
+    margin: 0 auto;
+    max-width: 3000px;  /* New line - Sets max width of the body content */
+  }
+
+  /* -------  Navigation ------- */
+
   header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px; /* Added padding to maintain space */
-    flex-direction: row; /* Ensure horizontal layout */
   }
 
   .logo {
-    text-align: left; /* Align logo to the left */
+    font-size: 24px; /* Adjust size as needed */
+    margin-bottom: 10px;
   }
 
-  #menu {
-    display: flex;
-    justify-content: flex-end; /* Align menu to the right */
+  header nav ul {
+    margin-top: 0;
+    flex-direction: row;
+    align-items: center;
   }
 
-  #menu li {
+  header nav ul li {
     margin-right: 20px;
   }
 
-  .form-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
+  header nav ul li:last-child {
+    margin-right: 0;
   }
 
-  form .form-row {
-    margin-bottom: 0;
+  /* -------  Search Form ------- */
+
+  form {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  form label {
+    flex-basis: 30%;
+    max-width: 30%;
+    margin-right: 10px;
+  }
+
+  form select,
+  form input {
+    flex-grow: 1;
+    max-width: 65%;
+    margin-bottom: 10px;
   }
 
   form button {
-    width: 200px;
-    padding: 10px 0;
+    flex-basis: 100%;
+    max-width: 100px; /* Adjust max-width as needed */
+    padding: 10px 15px; /* Adjust padding as needed */
   }
 
-  #about {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    text-align: left;
-  }
-  
-  .about-content {
-    display: flex;
-  }
-  
-  .about-images {
-    display: flex;
-    flex-direction: row;
-    margin: 10px 20px 30px 10px;
-  }
-  
-  .about-images img {
-    margin-right: 10px;
-    width: auto;
-    max-width: 620px;
-  }
-  
-  .about-content p {
-    width: auto;
-    margin-top: 80px;
-    margin-left: 10px;
+  /* ------- About ------- */
+
+  #about .about-content {
+  display: flex;
+  flex-direction: row;
   }
 
-  .item {
-    flex: 1;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
-    width: 50%; /* Set width to occupy half of the container in desktop view */
+  #about .about-content img {
+    width: 25%;
+    height: 100%;
+    margin-right: 20px;
   }
 
-  .item h3 {
-    margin-top: 10px;
-    font-size: 20px;
-    text-align: left;
+  #about .about-content p {
+    flex: 1 1 60%;
+    max-width: 100%;
+    margin-left: 20px; /* Add this line */
   }
 
-  .item img {
-    width: auto;
-    max-width: 1200px;
-  }
+  /* ------- Ideas ------- */
 
-  #host {
-    display: flex;
-    justify-content: left;
-  }
-  
-  .host-container {
-    display: flex;
+  #ideas {
     text-align: center;
   }
   
-  .host-content {
-    text-align: left;
-    flex: 1;
-    margin-bottom: 20px;
-    margin-top: 80px;
-    margin-right: 0;
+  #ideas .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
   }
   
-  .host-image {
-    flex: 1;
-    margin-bottom: 20px;
+  #ideas .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
-  .host-image img {
-    width: auto;
-    max-width: 1200px;
+  #ideas .item img {
+    width: 100%;
+    height: auto;
   }
+  
+  #ideas h3 {
+    margin-top: 10px;
+  }
+
+/* ------- Hosts ------- */
+
+#host {
+  display: flex;
+  justify-content: left;
 }
+
+.host-container {
+  display: flex;
+  text-align: center;
+}
+
+.host-content {
+  text-align: left;
+  flex: 1;
+  margin-bottom: 20px;
+  margin-top: 60px;
+  margin-right: 0;
+}
+
+.host-image {
+  flex: 1;
+  margin-bottom: 20px;
+}
+
+.host-image img {
+  width: 100%;
+  height: auto;
+}
+
+}
+
