--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ footer p {
   form label {
     flex-basis: 30%;
     max-width: 30%;
-    margin: 0;
+    margin-left: 10px;
   }
 
   form select,
