--- a/style.css
+++ b/style.css
@@ -114,13 +114,15 @@ form {
   flex-basis: 30%; /* Adjust this as necessary */
 }
 
-.form-group select,
-.form-group input {
+.input-field {
   flex-grow: 1;
-  max-width: 72%; /* Adjust this as necessary */
-  margin-left: 10px;
+  text-align: right;
 }
 
+.input-field input,
+.input-field select {
+  width: 100%;
+}
 
 form button {
   background-color: #ff385c;
@@ -177,6 +179,7 @@ footer p {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .logo {
@@ -200,29 +203,50 @@ footer p {
 
   /* -------  Search Form ------- */
 
-  form {
+  .form-row {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+  }
+
+  .form-container {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-grow: 1;
+  }
+
+  .form-group {
+    flex-basis: 0;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    align-items: stretch;
+  }
+
+  .form-group:last-child {
+    margin-right: 0;
   }
 
   .form-group label {
-    margin-top: auto;
-    flex-basis: 20%;
+    margin-bottom: 10px;
+    align-self: flex-start;
   }
 
-  .form-group select,
-  .form-group input {
-    margin-top: auto;
-    max-width: 72%;
+  .input-field {
+    flex-grow: 0;
+  }
+
+  .input-field input,
+  .input-field select {
+    width: 100%;
+    box-sizing: border-box;
   }
 
   form button {
-    flex-basis: 100%;
-    max-width: 125px; /* Adjust max-width as needed */
-    padding: 10px 15px; /* Adjust padding as needed */
+    flex-shrink: 0;
+    margin-left: 20px;
+    width: auto;
+    padding: 10px 20px;
   }
 
   /* ------- About ------- */
