--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ footer p {
   .form-row {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .form-container {
@@ -220,7 +221,7 @@ footer p {
     display: flex;
     flex-direction: column;
     margin-right: 20px;
-    align-items: stretch;
+    align-items: baseline;
   }
 
   .form-group:last-child {
@@ -239,7 +240,6 @@ footer p {
   .input-field input,
   .input-field select {
     width: 100%;
-    box-sizing: border-box;
   }
 
   form button {
